--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "MiniJam180_Refresh.sln"
+    "dotnet.defaultSolution": "GameJam.sln"
 }
